was created the contact and footer section

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 <h2>Hobbies</h2>
             </div>
             <ul class="hobbies-list">
-                <li>Lerning</li>
+                <li>Learn</li>
                 <li>Lisent to music</li>
                 <li>Photografy</li>
                 <li>See car races</li>
@@ -317,7 +317,7 @@
                 </div>
             </div>
             <div class="inspiration-item">
-                <a href="https://www.beek.io" target="_blank">
+                <a href="https://thefryeshow.com" target="_blank">
                     <img height="50px" src="./img/ins-robbie.png" alt="" srcset="">
                 </a>
                 <div class="inspiration-description">
@@ -336,7 +336,40 @@
             <div class="sub-title">
                 <h2>Contact me</h2>
             </div>
+            <form action="">
+                <div>
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" placeholder="Juanito Pérez">
+                </div>
+                <div>
+                    <label for="email">Email:</label>
+                    <input type="text" id="email" name="email" placeholder="juanito@example.com">
+                </div>
+                <div>
+                    <label for="message">Message:</label>
+                    <textarea name="message" id="message" name="message" cols="10" rows="10" placeholder="Hello..."></textarea>
+                </div>
+                <div class="form-submit">
+                    <button type="submit" class="btn btn-primary">Send message</button>
+                </div>
+            </form>
         </div>
     </div>
+    <div class="wrapper">
+        <div class="social">
+            <a href="#"><img src="./img/button_GH.svg" alt="GitHub" srcset=""></a>
+            <a href="#"><img src="./img/button_IG.svg" alt="Instagram" srcset=""></a>
+            <a href="#"><img src="./img/button_TW.svg" alt="Twitter" srcset=""></a>
+            <a href="#"><img src="./img/button_ML.svg" alt="Mail" srcset=""></a>
+        </div>
+    </div>
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-copyrigth">
+                <p>Made with 🤍 by Joe</p>
+                <p>Copyrigth 2021 all rights reserved</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
