Was created the menu items and styles for that

--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
         <div class="wrapper">
             <div class="head-content">
                 <img width="35px" src="./img/logo-j.svg" alt="Joe Mancera logo" srcset="">
+                <div>
+                    <nav aria-label="main-navigation" class="menu">
+                        <ul>
+                            <li><a href="#">Hello</a></li>
+                            <li><a href="#">About me</a></li>
+                            <li><a href="#">Skills</a></li>
+                            <li><a href="#">Projects</a></li>
+                            <li><a href="#">Conctact</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
         </div>
     </header>
