was modified project section to tables devices and fix errors

--- a/index.html
+++ b/index.html
@@ -232,10 +232,10 @@
         </div>
     </div>
     <div class="wrapper">
+        <div class="sub-title">
+            <h2>Projects</h2>
+        </div>
         <div class="projects" id="projects">
-            <div class="sub-title">
-                <h2>Projects</h2>
-            </div>
             <div class="project-item">
                 <div class="project-title">
                     <h3>CODI - Ecopetrol</h3>
@@ -268,6 +268,17 @@
                         This web app was created to use the REST API services that have OpenText ContentServer to externs apps.
                     </p>
                     <button class="btn btn-secondary">See app</button>
+                </div>
+            </div>
+            <div class="project-item">
+                <div class="project-title">
+                    <h3>My website - Figma</h3>
+                </div>
+                <div class="project-description">
+                    <p>
+                        This project have the design here implemented, I used components, fonts and more.
+                    </p>
+                    <button class="btn btn-primary">See .Fig</button>
                 </div>
             </div>
         </div>
