was modified contact section to tablet devices and fix issues

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Joe Mancera | Developer</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=KoHo:wght@200;400;700&family=Roboto+Mono:wght@200;400&display=swap" rel="stylesheet">
-    <link rel="icon" href="images/favicon.png" type="image/png">
+    <link rel="icon" href="./img/favicon.png" type="image/png">
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
@@ -299,10 +299,10 @@
         </div>
     </div>
     <div class="wrapper">
+        <div class="sub-title">
+            <h2>Inspirations</h2>
+        </div>
         <div class="inspirations">
-            <div class="sub-title">
-                <h2>Inspirations</h2>
-            </div>
             <div class="inspiration-item">
                 <a href="https://www.beek.io" target="_blank">
                     <img height="50px" src="./img/ins-pamela.png" alt="" srcset="">
@@ -358,11 +358,11 @@
         </div>
     </div>
     <div class="wrapper">
+        <div class="sub-title">
+            <h2>Contact me</h2>
+        </div>
         <div class="contact" id="contact">
-            <div class="sub-title">
-                <h2>Contact me</h2>
-            </div>
-            <form action="">
+            <form class="form" action="">
                 <div>
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" placeholder="Juanito Pérez">
