was modified inspirations section to descktop devices

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         <div class="inspirations">
             <div class="inspiration-item">
                 <a href="https://www.beek.io" target="_blank">
-                    <img height="50px" src="./img/ins-pamela.png" alt="" srcset="">
+                    <img src="./img/ins-pamela.png" alt="" srcset="">
                 </a>
                 <div class="inspiration-description">
                     <div class="inspiration-name">
@@ -318,7 +318,7 @@
             </div>
             <div class="inspiration-item">
                 <a href="https://www.platzi.com" target="_blank">
-                    <img height="50px" src="./img/ins-freddy.png" alt="" srcset="">
+                    <img src="./img/ins-freddy.png" alt="" srcset="">
                 </a>
                 <div class="inspiration-description">
                     <div class="inspiration-name">
@@ -331,7 +331,7 @@
             </div>
             <div class="inspiration-item">
                 <a href="https://www.tatianacalderon.com" target="_blank">
-                    <img height="50px" src="./img/ins-tatiana.png" alt="" srcset="">
+                    <img src="./img/ins-tatiana.png" alt="" srcset="">
                 </a>
                 <div class="inspiration-description">
                     <div class="inspiration-name">
@@ -344,7 +344,7 @@
             </div>
             <div class="inspiration-item">
                 <a href="https://thefryeshow.com" target="_blank">
-                    <img height="50px" src="./img/ins-robbie.png" alt="" srcset="">
+                    <img src="./img/ins-robbie.png" alt="" srcset="">
                 </a>
                 <div class="inspiration-description">
                     <div class="inspiration-name">
