--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                 </p>
             </div>
             <div class="social">
-                <a href="#"><img src="./img/button_GH.svg" alt="GitHub" srcset=""></a>
-                <a href="#"><img src="./img/button_IG.svg" alt="Instagram" srcset=""></a>
-                <a href="#"><img src="./img/button_TW.svg" alt="Twitter" srcset=""></a>
-                <a href="#"><img src="./img/button_ML.svg" alt="Mail" srcset=""></a>
+                <a href="https://github.com/JoeMancera"><img src="./img/button_GH.svg" alt="GitHub" srcset=""></a>
+                <a href="https://www.instagram.com/joeharrym/"><img src="./img/button_IG.svg" alt="Instagram" srcset=""></a>
+                <a href="https://twitter.com/JoeHarrym"><img src="./img/button_TW.svg" alt="Twitter" srcset=""></a>
+                <a href="https://www.linkedin.com/in/joemancera"><img src="./img/button_ML.svg" alt="LinkedIn" srcset=""></a>
             </div>
             <div class="hero-curriculum">
                 <button class="btn btn-primary">Curriculum</button>
@@ -383,10 +383,10 @@
     </div>
     <div class="wrapper">
         <div class="social">
-            <a href="#"><img src="./img/button_GH.svg" alt="GitHub" srcset=""></a>
-            <a href="#"><img src="./img/button_IG.svg" alt="Instagram" srcset=""></a>
-            <a href="#"><img src="./img/button_TW.svg" alt="Twitter" srcset=""></a>
-            <a href="#"><img src="./img/button_ML.svg" alt="Mail" srcset=""></a>
+            <a href="https://github.com/JoeMancera"><img src="./img/button_GH.svg" alt="GitHub" srcset=""></a>
+            <a href="https://www.instagram.com/joeharrym/"><img src="./img/button_IG.svg" alt="Instagram" srcset=""></a>
+            <a href="https://twitter.com/JoeHarrym"><img src="./img/button_TW.svg" alt="Twitter" srcset=""></a>
+            <a href="mailto:joeharrymancera@gmail.com"><img src="./img/button_ML.svg" alt="Mail" srcset=""></a>
         </div>
     </div>
     <footer class="footer">
