--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <li><a href="#about-me">About me</a></li>
                             <li><a href="#skills">Skills</a></li>
                             <li><a href="#projects">Projects</a></li>
-                            <li><a href="#contact">Conctact</a></li>
+                            <li><a href="#contact">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
