was modified color link in header menu

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                 </p>
             </div>
             <div class="social">
-                <a href="https://github.com/JoeMancera"><img src="./img/button_GH.svg" alt="GitHub" srcset=""></a>
-                <a href="https://www.instagram.com/joeharrym/"><img src="./img/button_IG.svg" alt="Instagram" srcset=""></a>
-                <a href="https://twitter.com/JoeHarrym"><img src="./img/button_TW.svg" alt="Twitter" srcset=""></a>
-                <a href="https://www.linkedin.com/in/joemancera"><img src="./img/button_ML.svg" alt="LinkedIn" srcset=""></a>
+                <a target="_blank" href="https://github.com/JoeMancera"><img src="./img/button_GH.svg" alt="GitHub" srcset=""></a>
+                <a target="_blank" href="https://www.instagram.com/joeharrym/"><img src="./img/button_IG.svg" alt="Instagram" srcset=""></a>
+                <a target="_blank" href="https://twitter.com/JoeHarrym"><img src="./img/button_TW.svg" alt="Twitter" srcset=""></a>
+                <a target="_blank" href="mailto:joeharrymancera@gmail.com"><img src="./img/button_ML.svg" alt="Mail" srcset=""></a>
             </div>
             <div class="hero-curriculum">
                 <button class="btn btn-primary">Curriculum</button>
@@ -244,7 +244,7 @@
                     <p>
                         This web app was created to ecopetrol to realize a digital courier to people outside of company
                     </p>
-                    <button class="btn btn-secondary">See app</button>
+                    <a target="_blank" href="https://sedeelectronica.ecopetrol.com.co/" class="btn btn-secondary">See app</a>
                 </div>
             </div>
             <div class="project-item">
@@ -255,8 +255,8 @@
                     <p>
                         This web app was created to admission test to Ci2 company, but I worked with its partner.
                     </p>
-                    <button class="btn btn-secondary">See app</button>
-                    <button class="btn btn-primary">See code</button>
+                    <a target="_blank" href="http://shoppingwebcar.apphb.com" class="btn btn-secondary">See app</a>
+                    <a target="_blank" href="https://github.com/JoeMancera/shoppingcar" class="btn btn-primary">See code</a>
                 </div>
             </div>
             <div class="project-item">
@@ -267,7 +267,7 @@
                     <p>
                         This web app was created to use the REST API services that have OpenText ContentServer to externs apps.
                     </p>
-                    <button class="btn btn-secondary">See app</button>
+                    <a target="_blank" href="https://github.com/JoeMancera/DemoTechedge" class="btn btn-secondary">See app</a>
                 </div>
             </div>
             <div class="project-item">
@@ -278,7 +278,7 @@
                     <p>
                         This project have the design here implemented, I used components, fonts and more.
                     </p>
-                    <button class="btn btn-primary">See .Fig</button>
+                    <a target="_blank" href="./assets/MyPortfolio.fig" class="btn btn-primary">See .Fig</a>
                 </div>
             </div>
         </div>
@@ -383,10 +383,10 @@
     </div>
     <div class="wrapper">
         <div class="social">
-            <a href="https://github.com/JoeMancera"><img src="./img/button_GH.svg" alt="GitHub" srcset=""></a>
-            <a href="https://www.instagram.com/joeharrym/"><img src="./img/button_IG.svg" alt="Instagram" srcset=""></a>
-            <a href="https://twitter.com/JoeHarrym"><img src="./img/button_TW.svg" alt="Twitter" srcset=""></a>
-            <a href="mailto:joeharrymancera@gmail.com"><img src="./img/button_ML.svg" alt="Mail" srcset=""></a>
+            <a target="_blank" href="https://github.com/JoeMancera"><img src="./img/button_GH.svg" alt="GitHub" srcset=""></a>
+            <a target="_blank" href="https://www.instagram.com/joeharrym/"><img src="./img/button_IG.svg" alt="Instagram" srcset=""></a>
+            <a target="_blank" href="https://twitter.com/JoeHarrym"><img src="./img/button_TW.svg" alt="Twitter" srcset=""></a>
+            <a target="_blank" href="mailto:joeharrymancera@gmail.com"><img src="./img/button_ML.svg" alt="Mail" srcset=""></a>
         </div>
     </div>
     <footer class="footer">
