was modified type button to demo project

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                     <p>
                         This web app was created to use the REST API services that have OpenText ContentServer to externs apps.
                     </p>
-                    <a target="_blank" href="https://github.com/JoeMancera/DemoTechedge" class="btn btn-secondary">See app</a>
+                    <a target="_blank" href="https://github.com/JoeMancera/DemoTechedge" class="btn btn-primary">See code</a>
                 </div>
             </div>
             <div class="project-item">
