Was modified hero style and was added curriculum pdf

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                 <a target="_blank" href="https://github.com/JoeMancera"><img src="./img/button_GH.svg" alt="GitHub" srcset=""></a>
                 <a target="_blank" href="https://www.instagram.com/joeharrym/"><img src="./img/button_IG.svg" alt="Instagram" srcset=""></a>
                 <a target="_blank" href="https://twitter.com/JoeHarrym"><img src="./img/button_TW.svg" alt="Twitter" srcset=""></a>
-                <a target="_blank" href="mailto:joeharrymancera@gmail.com"><img src="./img/button_ML.svg" alt="Mail" srcset=""></a>
+                <a target="_blank" href="https://www.linkedin.com/in/joemancera/"><img src="./img/button_IN.svg" alt="LinkedIn" srcset=""></a>
             </div>
             <div class="hero-curriculum">
-                <button class="btn btn-primary">Curriculum</button>
+                <a target="_blank" href="./assets/MyPortfolio.pdf" class="btn btn-primary">Curriculum</a>
             </div>
         </div>
         <div class="hero-arrow">
@@ -387,7 +387,7 @@
             <a target="_blank" href="https://github.com/JoeMancera"><img src="./img/button_GH.svg" alt="GitHub" srcset=""></a>
             <a target="_blank" href="https://www.instagram.com/joeharrym/"><img src="./img/button_IG.svg" alt="Instagram" srcset=""></a>
             <a target="_blank" href="https://twitter.com/JoeHarrym"><img src="./img/button_TW.svg" alt="Twitter" srcset=""></a>
-            <a target="_blank" href="mailto:joeharrymancera@gmail.com"><img src="./img/button_ML.svg" alt="Mail" srcset=""></a>
+            <a target="_blank" href="https://www.linkedin.com/in/joemancera/"><img src="./img/button_IN.svg" alt="LinkedIn" srcset=""></a>
         </div>
     </div>
     <footer class="footer">
