Was added accessibility in sosial media buttons and menu items

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                 </p>
             </div>
             <div class="social">
-                <a target="_blank" href="https://github.com/JoeMancera" alt="Go to Joe's GitHub"><img src="./img/button_GH.svg" alt="GitHub" srcset=""></a>
-                <a target="_blank" href="https://www.instagram.com/joeharrym/" alt="Go to Joe's instagram"><img src="./img/button_IG.svg" alt="Instagram" srcset=""></a>
-                <a target="_blank" href="https://twitter.com/JoeHarrym" alt="Go to Joe's Twitter"><img src="./img/button_TW.svg" alt="Twitter" srcset=""></a>
-                <a target="_blank" href="https://www.linkedin.com/in/joemancera/" alt="Go to Joe's linkedin"><img src="./img/button_IN.svg" alt="LinkedIn" srcset=""></a>
+                <a target="_blank" title="Go to Joe's GitHub" href="https://github.com/JoeMancera" alt="Go to Joe's GitHub"><img src="./img/button_GH.svg" alt="GitHub" srcset=""></a>
+                <a target="_blank" title="Go to Joe's instagram" href="https://www.instagram.com/joeharrym/" alt="Go to Joe's instagram"><img src="./img/button_IG.svg" alt="Instagram" srcset=""></a>
+                <a target="_blank" title="Go to Joe's Twitter" href="https://twitter.com/JoeHarrym" alt="Go to Joe's Twitter"><img src="./img/button_TW.svg" alt="Twitter" srcset=""></a>
+                <a target="_blank" title="Go to Joe's linkedIn" href="https://www.linkedin.com/in/joemancera/" alt="Go to Joe's linkedIn"><img src="./img/button_IN.svg" alt="LinkedIn" srcset=""></a>
             </div>
             <div class="hero-curriculum">
                 <a target="_blank" href="./assets/MyPortfolio.pdf" class="btn btn-primary" alt="Download curriculum">Curriculum</a>
@@ -384,10 +384,10 @@
     </div>
     <div class="wrapper">
         <div class="social">
-            <a target="_blank" href="https://github.com/JoeMancera" alt="Go to Joe's GitHub"><img src="./img/button_GH.svg" alt="GitHub" srcset=""></a>
-            <a target="_blank" href="https://www.instagram.com/joeharrym/" alt="Go to Joe's instagram"><img src="./img/button_IG.svg" alt="Instagram" srcset=""></a>
-            <a target="_blank" href="https://twitter.com/JoeHarrym" alt="Go to Joe's Twitter"><img src="./img/button_TW.svg" alt="Twitter" srcset=""></a>
-            <a target="_blank" href="https://www.linkedin.com/in/joemancera/" alt="Go to Joe's linkedin"><img src="./img/button_IN.svg" alt="LinkedIn" srcset=""></a>
+            <a target="_blank" title="Go to Joe's GitHub" href="https://github.com/JoeMancera" alt="Go to Joe's GitHub"><img src="./img/button_GH.svg" alt="GitHub" srcset=""></a>
+            <a target="_blank" title="Go to Joe's instagram"" href="https://www.instagram.com/joeharrym/" alt="Go to Joe's instagram"><img src="./img/button_IG.svg" alt="Instagram" srcset=""></a>
+            <a target="_blank" title="Go to Joe's Twitter" href="https://twitter.com/JoeHarrym" alt="Go to Joe's Twitter"><img src="./img/button_TW.svg" alt="Twitter" srcset=""></a>
+            <a target="_blank" title="Go to Joe's linkedin" href="https://www.linkedin.com/in/joemancera/" alt="Go to Joe's linkedin"><img src="./img/button_IN.svg" alt="LinkedIn" srcset=""></a>
         </div>
     </div>
     <footer class="footer">
