Was modified hero images and titles

--- a/index.html
+++ b/index.html
@@ -45,15 +45,18 @@
         </nav>
     </header>
     <main aria-label="main" class="hero" id="main">
-        <img class="hero__image" src="./img/hero.png" alt="Joe Mancera" srcset="">
+        <figure class="hero__image">
+            <img  src="./img/hero.png" alt="Joe Mancera" srcset="">
+        </figure>
+        
         <div class="hero__title">
             <h1>
                 <span class="hero__hello">Hello!</span>
                 <div class="hero__myname">
-                    <span>I'm Joe <span class="hero__mylastname">Mancera</span></span>
+                    <span>I'm <span class="hero__mylastname">Joe Mancera</span></span>
                 </div>
             </h1>
-            <h2 class="role">Web developer</h2>
+            <h2 class="hero__role">Web developer</h2>
         </div>
         <div class="hero__content">
             <div class="hero__description">
