Was added about me styles and cosle elements

--- a/index.html
+++ b/index.html
@@ -95,22 +95,27 @@
             My name is Joe Mancera. I’m from Colombia and I have experience in different roles with backend and frontend dev. I have worked in high-performance teams, to develop the best tools to resolve problems.
         </p>
         <div class="console">
+            <div class="console__dots">
+                <div class="dot dot--red"></div>
+                <div class="dot dot--orange"></div>
+                <div class="dot dot--green"></div>
+            </div>
             <code>
-                <div>
+                <span>
                     <span class="console-pointer">~</span> sites
-                </div>
-                <div>
-                    <span class="console-pointer">></span> <span>sites</span> hyper-hypest  
-                </div>
-                <div>
-                    <span class="console-pointer">> hyper-hypest</span> <span class="console-git">git:</span> <span class="console-branch">(master)</span> 
-                </div>
-                <div>
-                    <span class="console-pointer">> hyper-hypest</span> <span class="console-git">git:</span> <span class="console-branch">(master)</span> <span class="console-command">git add.</span>
-                </div>
-                <div>
-                    <span class="console-pointer">> hyper-hypest</span> <span class="console-git">git:</span> <span class="console-branch">(master)</span> <span class="console-command">git commit - m “Hello world”</span>
-                </div>
+                </span>
+                <span>
+                    <span class="console-pointer">></span> <span class="console--select">sites</span> hyper-hypest  
+                </span>
+                <span>
+                    <span class="console-pointer">></span> <span class="console--select"> hyper-hypest</span> <span class="console-git">git</span>:(<span class="console-branch">master</span>)
+                </span>
+                <span>
+                    <span class="console-pointer">></span> <span class="console--select"> hyper-hypest</span> <span class="console-git">git</span>:(<span class="console-branch">master</span>) <span class="console-command">git</span> add.
+                </span>
+                <span>
+                    <span class="console-pointer">></span> <span class="console--select"> hyper-hypest</span> <span class="console-git">git</span>:(<span class="console-branch">master</span>) <span class="console-command">git</span>  commit - m “Hello world”
+                </span>
             </code>
         </div>
     </section>
