was added projects section, styles and icons to skills

--- a/index.html
+++ b/index.html
@@ -163,6 +163,51 @@
             <details class="skills__item">
                 <summary>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12 6C12 5.45 11.55 5 11 5H5.82L6.48 1.82L6.5 1.59C6.5 1.28 6.37 1 6.17 0.79L5.38 0L0.44 4.94C0.17 5.21 0 5.59 0 6V12.5C0 13.33 0.67 14 1.5 14H8.25C8.87 14 9.4 13.62 9.63 13.09L11.89 7.8C11.96 7.63 12 7.44 12 7.25V6V6ZM22.5 10H15.75C15.13 10 14.6 10.38 14.37 10.91L12.11 16.2C12.04 16.37 12 16.56 12 16.75V18C12 18.55 12.45 19 13 19H18.18L17.52 22.18L17.5 22.42C17.5 22.73 17.63 23.01 17.83 23.22L18.62 24L23.56 19.06C23.83 18.79 24 18.41 24 18V11.5C24 10.67 23.33 10 22.5 10Z"/>
+                    </svg>
+                    <span>Jest</span> 
+                </summary>
+                <p>
+                    I have some skills that can provide a lot of value to develope, near backend and frontend teams, high quality products.
+                </p>
+            </details>
+            <details class="skills__item">
+                <summary>
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 48 48" width="48px" height="48px">
+                        <g id="surface20453685">
+                        <path style=" stroke:none;fill-rule:nonzero;fill:var(--color-primary);fill-opacity:1;" d="M 24 4 L 7 14 L 7 34 L 24 44 L 41 34 L 41 14 Z M 24 4 "/>
+                        <path style=" stroke:none;fill-rule:nonzero;fill:rgb(40.000001%,40.000001%,40.000001%);fill-opacity:1;" d="M 23.5 24.5 L 23.5 33.5 L 15 29 L 15 19.5 Z M 23.5 24.5 "/>
+                        <path style=" stroke:none;fill-rule:nonzero;fill:rgb(40.000001%,40.000001%,40.000001%);fill-opacity:1;" d="M 24.5 24.5 L 24.5 33.5 L 33 29 L 33 19.5 Z M 24.5 24.5 "/>
+                        <path style=" stroke:none;fill-rule:nonzero;fill:rgb(40.000001%,40.000001%,40.000001%);fill-opacity:1;" d="M 24 23.5 L 15.5 18.5 L 24 14 L 32.5 18.5 Z M 24 23.5 "/>
+                        <path style=" stroke:none;fill-rule:nonzero;fill:var(--color-primary);fill-opacity:0.3;" d="M 23.5 7 L 23.5 13 L 14.5 18 L 9.5 15 Z M 23.5 7 "/>
+                        <path style=" stroke:none;fill-rule:nonzero;fill:var(--color-primary);fill-opacity:0.3;" d="M 23.5 41 L 23.5 35 L 14.5 30 L 9.5 33 Z M 23.5 41 "/>
+                        <path style=" stroke:none;fill-rule:nonzero;fill:var(--color-primary);fill-opacity:0.3;" d="M 14 19 L 9 16 L 9 32 L 14 29 Z M 14 19 "/>
+                        <path style=" stroke:none;fill-rule:nonzero;fill:var(--color-primary);fill-opacity:0.3;" d="M 24.5 7 L 24.5 13 L 33.5 18 L 38.5 15 Z M 24.5 7 "/>
+                        <path style=" stroke:none;fill-rule:nonzero;fill:var(--color-primary);fill-opacity:0.3;" d="M 24.5 41 L 24.5 35 L 33.5 30 L 38.5 33 Z M 24.5 41 "/>
+                        <path style=" stroke:none;fill-rule:nonzero;fill:var(--color-primary);fill-opacity:0.3;" d="M 34 19 L 39 16 L 39 32 L 34 29 Z M 34 19 "/>
+                        </g>
+                    </svg>
+
+                    <span>WebPack</span> 
+                </summary>
+                <p>
+                    I have some skills that can provide a lot of value to develope, near backend and frontend teams, high quality products.
+                </p>
+            </details>
+            <details class="skills__item">
+                <summary>
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12 2C13.1 2 14 2.9 14 4C14 5.1 13.1 6 12 6C10.9 6 10 5.1 10 4C10 2.9 10.9 2 12 2ZM21 9H15V22H13V16H11V22H9V9H3V7H21V9Z"/>
+                    </svg>                        
+                    <span>Accessibility</span> 
+                </summary>
+                <p>
+                    I have some skills that can provide a lot of value to develope, near backend and frontend teams, high quality products.
+                </p>
+            </details>
+            <details class="skills__item">
+                <summary>
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M21 7V17C21 19.206 19.206 21 17 21H7C4.794 21 3 19.206 3 17V7C3 4.794 4.794 3 7 3H17C19.206 3 21 4.794 21 7ZM7.313 16.067C6.949 16.259 6.777 16.687 6.908 17.077C7.073 17.567 7.637 17.793 8.094 17.552L11.779 15.613C12.376 15.299 12.75 14.68 12.75 14.005C12.75 13.331 12.376 12.712 11.779 12.397L8.094 10.458C7.637 10.217 7.072 10.443 6.908 10.933C6.777 11.323 6.948 11.751 7.313 11.943L11.23 14.004L7.313 16.067Z"/>
                     </svg>
                     <span>Command line</span> 
@@ -171,13 +216,68 @@
                     I have some skills that can provide a lot of value to develope, near backend and frontend teams, high quality products.
                 </p>
             </details>
+            <details class="skills__item">
+                <summary>
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M8.537 24C6.604 24 5.037 22.433 5.037 20.5C5.037 18.567 6.604 17 8.537 17H11.037C11.589 17 12.037 17.448 12.037 18V20.5C12.037 22.433 10.47 24 8.537 24ZM16.5 8H14C13.448 8 13 7.552 13 7V2C13 1.448 13.448 1 14 1H16.5C18.433 1 20 2.567 20 4.5C20 6.433 18.433 8 16.5 8ZM8.5 8H11C11.552 8 12 7.552 12 7V2C12 1.448 11.552 1 11 1H8.5C6.567 1 5 2.567 5 4.5C5 6.433 6.567 8 8.5 8ZM8.5 16H11C11.552 16 12 15.552 12 15V10C12 9.448 11.552 9 11 9H8.5C6.567 9 5 10.567 5 12.5C5 14.433 6.567 16 8.5 16ZM16 9C15.2044 9 14.4413 9.31607 13.8787 9.87868C13.3161 10.4413 13 11.2044 13 12C13 12.7956 13.3161 13.5587 13.8787 14.1213C14.4413 14.6839 15.2044 15 16 15C16.7956 15 17.5587 14.6839 18.1213 14.1213C18.6839 13.5587 19 12.7956 19 12C19 11.2044 18.6839 10.4413 18.1213 9.87868C17.5587 9.31607 16.7956 9 16 9Z"/>
+                    </svg>
+                    <span>Figma</span> 
+                </summary>
+                <p>
+                    I have some skills that can provide a lot of value to develope, near backend and frontend teams, high quality products.
+                </p>
+            </details>
+        </div>
+    </section>
+    <section id="projects">
+        <h2 class="section__title">Projects</h2>
+        <p class="section__description">
+            I show you to me the best and important projects that I have. I think that this projects help me to know how do APIs, how implement that and do the interaction with the users.
+        </p>
+        <div class="projects__container">
+            <div class="project" id="codi">
+                <div class="description">
+                    <h2>CODI - Ecopetrol</h2>
+                    <p>
+                        This web app was created to ecopetrol to realize a digital courier to people outside of company
+                    </p>
+                    <div class="button__group">
+                        <a href="#" class="btn btn-primary">See code</a>
+                        <a href="#" class="btn btn-secondary">See app</a>
+                    </div>
+                </div>
+            </div>
+            <div class="project" id="shoppingcar">
+                <div class="description">
+                    <h2>Shopping car - Ci2</h2>
+                    <p>
+                        This web app was created to admission test to Ci2 company, but I worked with its partner.
+                    </p>
+                    <div class="button__group">
+                        <a href="#" class="btn btn-primary">See code</a>
+                        <a href="#" class="btn btn-secondary">See app</a>
+                    </div>
+                </div>
+            </div>
+            <div class="project" id="catstagram">
+                <div class="description">
+                    <h2>Catstagram</h2>
+                    <p>
+                        I learn JS and React.js with this project. I used API cat to search images, breed and categories.
+                    </p>
+                    <div class="button__group">
+                        <a href="#" class="btn btn-primary">See code</a>
+                        <a href="#" class="btn btn-secondary">See app</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <footer class="footer">
         <div class="footer__content">
             <div class="footer__copyrigth">
                 <p>Made with 🤍 by Joe</p>
-                <p>Copyrigth 2021 all rights reserved</p>
+                <p>Copyright 2021 all rights reserved</p>
             </div>
         </div>
     </footer>
